--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body { margin-top:0; padding: 0; }
-#map { position: absolute; top: 65spx; bottom: 0; width: 100%; }
+#map { position: absolute; top: 65px; bottom: 0; width: 100%; }
 
 img {
     max-width: 50%;
